# 015_Cpp_CMake

./: .gitignore  CMakeLists.txt  README.md
CMake/inc/: pathConfig.h.in  versionConfig.h.in
res/read/: CMake_REMINDER.md
